# colorswan

./: .gitignore  README.md  pyproject.toml
src/colorswan/: __init__.py  constants.py  okcolor.py
tests/: test_okcolor.py
