[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colorswan"
version = "0.0.3"
description = "Precision color conversion library (sRGB to Oklab/Oklch)"
readme = "README.md"
authors = [
  { name = "Worod Haiadry", email = "worod.h@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/worodh/colorswan"
